--- a/1. data_preparation.ipynb
+++ b/1. data_preparation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Data Preparation\n",
-    "This jupyter notebook aims to prepare the data with the binary positions of the peptide in the proteins sequence."
+    "This Jupyter notebook is designed to process data and map the binary positions of peptides within protein sequences."
    ]
   },
   {
@@ -25,6 +25,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import json\n",
+    "from Bio import SeqIO\n",
     "\n",
     "# OsmitcStress.xlsx is the file that contains the data already filtered for the osmotic stress experiment\n",
     "df = pd.read_excel('data/OsmoticStress.xlsx')"
@@ -148,15 +150,16 @@
    "outputs": [],
    "source": [
     "# Reads data from the .Fasta file\n",
-    "from Bio import SeqIO\n",
     "def read_fasta_to_dict(file_path):\n",
+    "    \"\"\"\n",
+    "    Reads a fasta file and returns a dictionary with the sequences.\n",
+    "    \"\"\"\n",
     "    sequences = {}\n",
     "    for record in SeqIO.parse(file_path, \"fasta\"):\n",
     "        uniprot_id = record.id.split('|')[1]\n",
     "        sequences[uniprot_id] = str(record.seq)\n",
     "    return sequences\n",
     "\n",
-    "# Add resource\n",
     "fasta_file_path = 'data/UP000002311_559292.fasta'\n",
     "sequences = read_fasta_to_dict(fasta_file_path)"
    ]
@@ -179,6 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fix the data types\n",
     "df[\"full_sequence\"]= df[\"full_sequence\"].astype(str)\n",
     "df[\"Peptide_sequence\"]= df[\"Peptide_sequence\"]. astype(str)"
    ]
@@ -253,7 +257,8 @@
     "max_length = 1000\n",
     "\n",
     "# Padding binary position to length of 1000\n",
-    "# The padding is one to have same size tensors\n",
+    "# The padding is done by adding zeros to the right of the binary position list\n",
+    "# This is done to ensure that all binary position lists have the same length\n",
     "trimmed_df['Padded_Binary_Positions'] = trimmed_df['Binary_Positions'].apply(lambda x: np.pad(x, (0, max_length - len(x)), 'constant'))"
    ]
   },
@@ -406,7 +411,6 @@
    "outputs": [],
    "source": [
     "# Prevent formating problem\n",
-    "import json\n",
     "trimmed_df['Padded_Binary_Positions'] = trimmed_df['Padded_Binary_Positions'].apply(lambda x: json.dumps(x.tolist()))"
    ]
   },
