--- a/3. dl_model_data_prep.ipynb
+++ b/3. dl_model_data_prep.ipynb
@@ -4,15 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning Model\n",
-    "We are aiming to predict the Lip_norm parameter based on the binary positions and full embedding of a peptide."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataset preparation"
+    "# Deep Learning Model Data Preparation\n",
+    "This Jupyter notebook is dedicated to preparing the data for subsequent use in the deep learning model. It saves the data in pickle files to ensure efficient loading into the model in the next step, thereby avoiding memory load issues on the computer."
    ]
   },
   {
@@ -32,10 +25,11 @@
     "import json\n",
     "import pickle\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "def load_and_process_embedding(file_path):\n",
     "    \"\"\"\n",
-    "    Loads the embeddings\n",
+    "    Loads the embeddings pickle files.\n",
     "    \"\"\"\n",
     "    with open(file_path, 'rb') as file:\n",
     "        embeddings = pickle.load(file)\n",
@@ -69,25 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# embeddings_filter = embeddings_[embeddings_['Uniprot_ID'] == 'P32485']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# embeddings_filter.reset_index(drop=True, inplace=True)\n",
-    "# embeddings_filter.to_csv('./data/P32485_peptide.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "editable": true,
@@ -98,8 +73,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "# Creating trimmed embeddings: because of the first and last tokens\n",
     "# (https://www.science.org/doi/suppl/10.1126/science.ade2574/suppl_file/science.ade2574_sm.pdf)\n",
     "# We used BOS and EOS tokens to signal the beginning and end of a real protein, to allow the model to separate a full-sized protein from a cropped one.\n",
@@ -189,8 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read Binary position data\n",
-    "Read generated binary position data and target values from the csv file, that was generated in notebook 1. The data is already ready, which means that the binary position  is already padded to the length of one thousand."
+    "## Load Binary Position Data\n",
+    "Load the binary position data and corresponding target values from the CSV file created in notebook 1. This data is pre-processed, ensuring each binary position sequence is padded to a length of one thousand."
    ]
   },
   {
@@ -333,6 +306,7 @@
     }
    ],
    "source": [
+    "# Count the number of peptides per protein\n",
     "df_ = df.reset_index()\n",
     "counts = df_['Uniprot_ID'].value_counts()\n",
     "print(counts)"
@@ -366,10 +340,8 @@
     }
    ],
    "source": [
-    "# dataset = df.merge(trimmed_embeddings_df, left_index=True, right_index=True)\n",
+    "# Merge embeddings with the dataset with binary positions\n",
     "dataset = df.merge(trimmed_embeddings_df, left_index=True, right_index=True, how='inner')\n",
-    "# We can see that we have only the columns: 'Lip_norm', 'Binary Position', 'Embeddings'\n",
-    "# print(dataset.head())\n",
     "print(dataset.shape)"
    ]
   },
@@ -404,6 +376,7 @@
     }
    ],
    "source": [
+    "# Checks for missing values\n",
     "dataset_ = dataset.reset_index()\n",
     "counts = dataset_['Uniprot_ID'].value_counts()\n",
     "print(counts)"
@@ -605,6 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Saves the dataset to a pickle file\n",
     "dataset.to_pickle('data/dataset_3.pkl')"
    ]
   }
