--- a/0. training_data_analysis.ipynb
+++ b/0. training_data_analysis.ipynb
@@ -9,25 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as pp\n",
     "import seaborn as sns\n",
-    "import numpy as np\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_data = pd.read_csv('data/OsmoticStress_with_binary_positions_padded_5000.csv')\n",
-    "original_df = pd.read_csv('data/OsmoticStress_with_binary_positions.csv')\n",
     "original_excel = pd.read_excel('data/OsmoticStress.xlsx')"
    ]
   },
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +47,7 @@
        "(32709, 13)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +253,7 @@
        "Text(0.5, 1.0, 'Distribution of the training data')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -286,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -311,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb024685a80>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fca531caa10>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -349,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +356,7 @@
        "Text(0.5, 1.0, 'Training Lip-MS Score Data Distribution In Interval [-1,1]')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +388,7 @@
        "Text(0.5, 1.0, 'Unused Lip-MS Score Data Distribution In Interval [-1,1]')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
