--- a/0. training_data_analysis.ipynb
+++ b/0. training_data_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "(32709, 13)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -114,29 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32709, 13)\n",
-      "(27709, 13)\n"
+      "Dimensions of the original data set (32709, 13)\n",
+      "Dimensions of the unused data set (27709, 13)\n"
      ]
     }
    ],
    "source": [
     "indexs = training_data.sort_values(by=['index'],ascending=False)\n",
-    "print(original_excel.shape)\n",
+    "print(\"Dimensions of the original data set\",original_excel.shape)\n",
     "\n",
     "unused_data = original_excel.drop(indexs['index'] , axis=0)\n",
-    "print(unused_data.shape)"
+    "print(\"Dimensions of the unused data set\",unused_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "Text(0.5, 1.0, 'Distribution of the training data')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -309,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fca531caa10>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fca538275b0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "Text(0.5, 1.0, 'Training Lip-MS Score Data Distribution In Interval [-1,1]')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "Text(0.5, 1.0, 'Unused Lip-MS Score Data Distribution In Interval [-1,1]')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
